# DeviceManagement

./: .gitignore  README.md
backend/: CMakeLists.txt  CMakePresets.json
backend/src/: device_management.cpp  device_management.h  fleet_service_impl.cpp  fleet_service_impl.h  main.cpp
frontend/: cli.py  fleet_pb2.py  fleet_pb2_grpc.py
proto/: fleet.proto
scripts/: gen_proto.sh  run_server.sh
